syntax = "proto3";
package agency;
option go_package = "./agency";

service AgencyService {
    rpc CreateAgency(CreateAgencyRequest) returns (CreateAgencyResponse) {}
    rpc AgencyLogin(AgencyLoginRequest) returns (AgencyLoginResponse) {}
}

message CreateAgencyRequest {
    string license = 1;
}

message CreateAgencyResponse {
    string msg = 1;
    int64 error_code = 2;
    string token = 3;
}

message AgencyLoginRequest {
    string license = 1;
    string token = 2;
}

message AgencyLoginResponse {
    string msg = 1;
    int64 error_code = 2;
    string token = 3;
}